# backend_sample

./: Cargo.toml
command/: Cargo.toml
command/src/: lib.rs
command/src/uom/: create_uom_command.rs
def/: Cargo.toml
def/src/: lib.rs  state.rs  util.rs  uuid.rs
def/src/error/: uom.rs
def/src/extractor/: uom.rs
entity/: Cargo.toml
entity/src/: uom.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241128_022631_create_uom_table.rs
query/: Cargo.toml
query/src/: lib.rs
query/src/uom/: list_uoms_query.rs
route/: Cargo.toml
route/src/: lib.rs  uom_route.rs
server/: Cargo.toml
server/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/measurement_service/: uom.rs
src/: main.rs
