[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
discern = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

def = { path = "../def" }
entity = { path = "../entity" }
