[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

command = { path = "../command" }
def = { path = "../def" }
entity = { path = "../entity" }
query = { path = "../query" }
